--- a/wp-content/themes/fipradotcom/sass/typography/_headings.scss
+++ b/wp-content/themes/fipradotcom/sass/typography/_headings.scss
@@ -19,12 +19,17 @@ h3, h4 {
 h5, h6 { margin:0 0 $v-rhythm 0; }
 
 h1 {
-  font-weight: $font__normal;
-  @include font-size(21);
+  font-weight: $font__bold;
+  @include font-size(24);
   line-height: $v-rhythm * 2;
 
-  @include media($media__medium) { @include font-size(26); letter-spacing:-1px; line-height: $v-rhythm * 3; }
+  @include media($media__medium) { @include font-size(38); letter-spacing:-1px; line-height: $v-rhythm * 3.5; }
 
+  &.small {
+//    font-weight: $font__normal;
+    @include font-size(24);
+    @include media($media__medium) { @include font-size(21); }
+  }
 //  Style similar to H5 in .hero-banner and feature blocks
   &.feature {
     margin:0 0 $v-rhythm 0;
@@ -53,7 +58,7 @@ h2 {
 
 h3 {
   font-weight: $font__normal;
-  @include font-size(20);
+  @include font-size(21);
   line-height: $v-rhythm * 2;
   color:$color__fipra-blue-gray;
 
@@ -66,6 +71,8 @@ h4 {
   line-height: $v-rhythm * 2;
   color:$color__fipra-blue-gray;
 
+  @include media($media__large) { @include font-size(21); }
+
 }
 
 h5 { @include font-size(16); font-weight: $font__normal; text-transform: uppercase; letter-spacing:2px; }
@@ -75,7 +82,7 @@ h6 { @include font-size(14); font-weight: $font__bold; }
 h1, h2, h3, h4, h5, h6 {
   &.no-margin { margin:0; }
   &.no-top-margin { margin-top:0; }
-  &.upper { font-weight: $font__normal; letter-spacing: 5px; text-transform: uppercase; }
+  &.upper { font-weight: $font__normal; letter-spacing: 7px; text-transform: uppercase; }
 }
 
 //  In hero-banner, h1 looks the same as H5, H2 is same as H1 but light font weight
