--- a/wp-content/themes/fipradotcom/sass/elements/_elements.scss
+++ b/wp-content/themes/fipradotcom/sass/elements/_elements.scss
@@ -22,57 +22,6 @@ blockquote, q {
 	}
 }
 
-blockquote {
-  position:relative;
-  margin-top:$v-rhythm * 3;
-  @include linear-gradient($color__fipra-blue-gray 30%, darken($color__fipra-blue-gray, 5%) 100%);
-//  background: darken($color__fipra-blue-gray, 0%);
-  border-bottom:2px solid rgba(lighten($color__fipra-blue-gray, 40%), 0.6);
-  color:white;
-  @include font-size(16);
-  line-height: $v-rhythm * 2;
-  font-style: normal;
-
-  &.no-margin { margin-top: $v-rhythm; }
-
-  .quotemark {
-    @include font-size(32); color:rgba($color__fipra-blue, 0.1);
-    @include media($media__medium) { @include font-size(60); text-align: left; }
-    img { width:90%; }
-  }
-
-  img { @include media(max-width $media__medium) { max-width:70px; } }
-
-  p { margin-bottom:$v-rhythm; }
-
-  .author { color:white; font-weight:$font__black; text-transform: uppercase; margin:0; @include font-size(12);  font-style: normal; line-height: $v-rhythm * 1.5; }
-
-  .triangle {
-    display:none;
-    @include media($media__medium) { display:block; }
-    position:absolute;
-    bottom:-17px;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    //    border-style: inset;
-    -webkit-transform:rotate(360deg);
-  }
-
-  &.left {
-    margin-left:-56px; margin-right:-50px;
-    padding:$v-rhythm * 1.5 em(50px) $v-rhythm * 1.5 em(50px);
-    @include media($media__medium) { border-top-right-radius: 5px; border-bottom-right-radius: 5px; margin-right:0px; }
-    .triangle { left:0; border-width: 0 15px 15px 0; border-color: transparent rgba($color__fipra-blue-gray, 0.4) transparent transparent; }
-  }
-  &.right {
-    margin-left:-50px; margin-right:-56px;
-    padding:$v-rhythm * 1.5 em(50px) $v-rhythm * 1.5 em(50px);
-    @include media($media__medium) { border-top-left-radius: 5px; border-bottom-left-radius: 5px; margin-left:0px; padding:$v-rhythm * 1.5 em(60px) $v-rhythm * 1.5 em(24px); }
-    .triangle { right:0; border-width: 15px 15px 0 0; border-color: rgba($color__fipra-blue-gray, 0.4) transparent transparent transparent; }
-  }
-}
-
 hr {
 	background-color: lighten($color__background-hr, 12%);
 	border: 0;
@@ -99,3 +48,4 @@ strong {
 @import "lists";
 @import "tables";
 @import "buttons";
+@import "testimonials";
