--- a/wp-content/themes/fipradotcom/sass/layout/_header.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_header.scss
@@ -3,8 +3,9 @@
   background-color: $color__fipra-blue;
   #mobile-search {
     display:none;
-    @include outer-container($container__content-width);
-    padding:$v-rhythm em(12px);
+    @extend .content-area;
+    padding-top:$v-rhythm;
+    padding-bottom:$v-rhythm;
     form#searchform {
       @include row();
       @include span-columns(12);
@@ -16,17 +17,14 @@
 
 #header-container {
   @include clearfix;
-  background-color: white;
+  background-color: $color__fipra-lighter-gray;
 //  @include linear-gradient(white 90%, darken(white, 5%) 100%);
 //  @include linear-gradient(darken(white, 3%) 90%, darken(white, 5%) 100%);
   &.with-border { @include media($media__large) { border-top:$color__fipra-blue solid $v-rhythm / 2; } }
 
   header.site-header {
     @include row();
-    @include outer-container($container__outer-width);
-    padding:0 em(20px);
-    @include media($media__medium) { padding: 0 em(40px); }
-    @include media($media__xlarge) { padding:0; }
+    @extend .content-area;
 
     #site-branding-container {
       @include span-columns(3);
@@ -61,10 +59,8 @@
       }
       a.global-network-button {
         display: inline-block;
-        z-index:50;
+        z-index:5;
         float:left;
-        font-family: $font__sans;
-        font-weight: $font__black;
         color:white;
         background-color: $color__fipra-blue;
         padding:$v-rhythm em(12) $v-rhythm / 2 em(12);
