--- a/wp-content/themes/fipradotcom/sass/modules/_modules.scss
+++ b/wp-content/themes/fipradotcom/sass/modules/_modules.scss
@@ -211,7 +211,7 @@
         &.hide { display:none; }
       }
       .entry-title {
-        h3 {
+        h3, h4 {
           i { display:none; }
         }
       }
@@ -226,7 +226,7 @@
         &:last-child { padding-bottom: 0; }
         &:not(:last-child) { border-bottom:1px solid rgba(white, 0.2); }
         .entry-title {
-          h3 { position:relative; cursor:pointer; padding-right:em(20px);
+          h3, h4 { position:relative; cursor:pointer; padding-right:em(20px);
             i { display:block; position:absolute; right:0; top:0; }
           }
         }
