--- a/wp-content/themes/fipradotcom/sass/pages/_unit.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_unit.scss
@@ -1,47 +1,40 @@
 #page-banner {
   &.unit {
-    min-height:em(420px);
+//    min-height:em(420px);
     //    @include media(max-width $media__small) { background:$color__fipra-blue !important; }
 
-    #page-banner-content {
+    .full-width-block-content {
       text-align: center;
-      h1 { @include font-size(30); }
-      .meta { font-style: italic; margin-bottom:$v-rhythm; }
+      .meta { font-style: italic; margin-bottom:$v-rhythm; @include font-size(18); }
       img {
-        display: none;
-        width: 70px;
+        height: 38px;
+        margin-right:em(12px);
         margin-bottom: $v-rhythm;
+        vertical-align: top;
+        margin-top:-4px;
       }
+      h1 { line-height: $v-rhythm * 2.5; }
+      img, h1 { display: inline-block; }
 
-      @include media($media__small) {
-        h1 { @include font-size(36); letter-spacing: -1px; }
-        img { display:inline-block; }
-      }
+      @include media($media__large) { padding:$v-rhythm * 18 0 $v-rhythm !important; text-align: left; }
+      @include media($media__xlarge) { padding:$v-rhythm * 28 0 $v-rhythm !important; }
 
-      @include media($media__medium) {
-        text-align: left;
-        h1 { @include font-size(56); }
-      }
-
-      @include media($media__medium) { padding:$v-rhythm * 14 em(40px) $v-rhythm * 2 !important; }
-      @include media($media__large) { padding:$v-rhythm * 18 em(40px) $v-rhythm * 2 !important; }
-
-      &.dark-text {
-        h1 { color: $color__fipra-blue !important; text-shadow:0px 1px 1px $color__fipra-light-gray !important; }
-        h2 { color: $color__fipra-blue; }
-        .meta { color:black; }
-        .btn.primary {
-          text-shadow:0px 1px 3px lighten($color__fipra-blue, 10%);
-        }
-        .btn.secondary {
-          border:1px solid $color__fipra-blue;
-          color:$color__fipra-blue;
-          &:hover {
-            border:1px solid $color__fipra-blue-gray;
-            color:$color__fipra-blue-gray;
-          }
-        }
-      }
+//      &.dark-text {
+//        h1 { color: $color__fipra-blue !important; text-shadow:0px 1px 1px $color__fipra-light-gray !important; }
+//        h2 { color: $color__fipra-blue; }
+//        .meta { color:black; }
+//        .btn.primary {
+//          text-shadow:0px 1px 3px lighten($color__fipra-blue, 10%);
+//        }
+//        .btn.secondary {
+//          border:1px solid $color__fipra-blue;
+//          color:$color__fipra-blue;
+//          &:hover {
+//            border:1px solid $color__fipra-blue-gray;
+//            color:$color__fipra-blue-gray;
+//          }
+//        }
+//      }
     }
   }
 }
