--- a/wp-content/themes/fipradotcom/sass/variables-site/_colors.scss
+++ b/wp-content/themes/fipradotcom/sass/variables-site/_colors.scss
@@ -6,8 +6,9 @@ $color__fipra-periwinkle: #ccd3e5;
 $color__fipra-violet: #6f5ce5;
 $color__fipra-turquoise: #14b1cc;
 $color__fipra-gold: #e5c75c;
-$color__fipra-lighter-gray: #f4f3f2;
+$color__fipra-lighter-gray: #f0f0f5;
 $color__fipra-light-gray: #e1e2e6;
+$color__fipra-dark-gray: darken(saturate($color__fipra-blue-gray,10%), 12%);
 $color__fipra-orange: #DE8A56;
 $color__fipra-brown: #866551;
 $color__fipra-light-orange: #fce5c3;
@@ -18,7 +19,7 @@ $color_soft-white: darken(white, 3%);
 $color_white: #fff;
 
 //Underscores colours
-$color__background-body: #fff;
+$color__background-body: $color__fipra-lighter-gray;
 $color__background-screen: #f1f1f1;
 $color__background-hr: #ccc;
 $color__background-button: #e6e6e6;
