--- a/wp-content/themes/fipradotcom/sass/typography/_headings.scss
+++ b/wp-content/themes/fipradotcom/sass/typography/_headings.scss
@@ -23,7 +23,8 @@ h1 {
   @include font-size(24);
   line-height: $v-rhythm * 2;
 
-  @include media($media__medium) { @include font-size(38); letter-spacing:-1px; line-height: $v-rhythm * 3.5; }
+  @include media($media__medium) { @include font-size(32); letter-spacing:-1px; line-height: $v-rhythm * 3; }
+  @include media($media__large) { @include font-size(38); letter-spacing:-1px; line-height: $v-rhythm * 3.5; }
 
   &.small {
 //    font-weight: $font__normal;
@@ -75,7 +76,9 @@ h4 {
 
 }
 
-h5 { @include font-size(16); font-weight: $font__normal; text-transform: uppercase; letter-spacing:2px; }
+h5 { @include font-size(14); font-weight: $font__normal; text-transform: uppercase; letter-spacing:2px;
+  @include media($media__small) { @include font-size(16); }
+}
 
 h6 { @include font-size(14); font-weight: $font__bold; }
 
