--- a/wp-content/themes/fipradotcom/sass/variables-site/_structure.scss
+++ b/wp-content/themes/fipradotcom/sass/variables-site/_structure.scss
@@ -9,3 +9,5 @@ $media__xlarge: 1500px;
 $media__large: 1200px;
 $media__medium: 769px;
 $media__small: 481px;
+
+//$gutter: modular-scale(1, 2em, $golden) !default;
