--- a/wp-content/themes/fipradotcom/sass/layout/_header.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_header.scss
@@ -17,7 +17,8 @@
 
 #header-container {
   @include clearfix;
-  background-color: $color__fipra-lighter-gray;
+  background-color: white;
+  @include media($media__medium) { background-color: $color__fipra-lighter-gray; }
 //  @include linear-gradient(white 90%, darken(white, 5%) 100%);
 //  @include linear-gradient(darken(white, 3%) 90%, darken(white, 5%) 100%);
   &.with-border { @include media($media__large) { border-top:$color__fipra-blue solid $v-rhythm / 2; } }
