--- a/wp-content/themes/fipradotcom/sass/layout/_team.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_team.scss
@@ -66,10 +66,8 @@
   }
 
   .team-member {
+    @include clearfix;
     position:relative;
-    @include clearfix();
-
-
     @include font-size(18);
     padding:$v-rhythm em(12px);
     &:not(:last-child) { margin-bottom: $v-rhythm; }
@@ -80,8 +78,8 @@
     }
 
     p.bio { @include font-size(14); line-height:$v-rhythm * 1.5; }
-    h4 { margin-bottom: $v-rhythm; }
-    h5 {@include font-size(18); }
+//    h4 { margin-bottom: $v-rhythm; }
+//    h5 {@include font-size(18); }
     h6 { margin-bottom:$v-rhythm / 2;
       @include media(max-width $media__large) { margin-top: $v-rhythm * 0.5; } }
     img {
@@ -91,12 +89,13 @@
 
     ul.team-member-expertise {
       list-style: none;
-      li { float:left; margin-right:em(4px); margin-bottom:em(4px) !important; @include font-size(16);
+      li { float:left; margin-right:em(4px); margin-bottom:em(4px) !important;
         a {
           display:block;
           width:em(30px);
           height:em(30px);
-          line-height:28px;
+          @include font-size(21);
+          line-height:36px;
           text-align: center;
           background-color:$color__fipra-blue;
 //          @include linear-gradient($color__fipra-turquoise 50%, darken($color__fipra-turquoise, 5%) 90%);
@@ -107,6 +106,8 @@
             background-color: $color__fipra-blue-gray;
 //            @include linear-gradient($color__fipra-blue-gray 50%, darken($color__fipra-blue-gray, 5%) 90%);
           }
+
+          @include media($media__medium) { @include font-size(16); line-height:28px; }
         }
       }
     }
