--- a/wp-content/themes/fipradotcom/sass/modules/_sidebar.scss
+++ b/wp-content/themes/fipradotcom/sass/modules/_sidebar.scss
@@ -1,17 +1,50 @@
 ul.sidebar-list {
   list-style-type: none;
-  font-family: $font__sans;
+
   li {
     display:block;
     margin-bottom:$v-rhythm;
+
     i { @include font-size(18); margin-right:em(12px); color:darken($color__fipra-light-gray, 40%); }
     .sidebar-list-flag { width: em(24px); height:em(16px); margin-right:em(5px); }
 
     a { display:block; padding:$v-rhythm / 2 em(12px);
-      @include linear-gradient(lighten($color__fipra-light-gray, 5%) 60%, lighten($color__fipra-light-gray, 0%) 100%);
-
+      background-color: white;
       border-bottom:1px solid darken($color__fipra-light-gray, 7%);
       &:hover { opacity:0.7; }
     }
+  }
+
+}
+
+.sidebar-contacts-container {
+  @include clearfix;
+  background-color: $color__fipra-blue-gray;
+  color:lighten($color__fipra-blue-gray, 43%);
+  a { color:white; &:hover { opacity:0.7; } }
+  padding: $v-rhythm em(12px);
+  margin-bottom: $v-rhythm;
+
+  @include media($media__medium) {
+    @include linear-gradient(darken($color__fipra-blue-gray, 6%) 0%, $color__fipra-blue-gray 20px);
+    padding: $v-rhythm * 3 em(12px) $v-rhythm em(12px);
+    margin-top:-$v-rhythm * 3;
+  }
+
+  .sidebar-contacts-group {
+
+    .sidebar-contact {
+      margin-top:$v-rhythm; border-top:1px solid lighten($color__fipra-blue-gray, 10%); padding-top: $v-rhythm;
+
+      &:first-child { border:0; padding-top:0; }
+
+      img { max-width: 100px; display:block; margin-bottom:$v-rhythm; }
+
+      @include media(min-width $media__small max-width $media__medium) {
+        @include span-columns(6); @include omega(2n);
+        border:0; padding-top:0;
+      }
+    }
+
   }
 }
